{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 264,
  "lineage": "828847a7-ccac-c618-a4e4-f755a2fd69f5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-091eca0383cf596f5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-199-173-16.compute-1.amazonaws.com",
            "public_ip": "44.199.173.16",
            "public_ipv4_pool": "amazon",
            "tags": {
              "KubespotEnvironment": "dev"
            },
            "tags_all": {
              "KubespotEnvironment": "dev"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e4d78484324688a1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-199-118-103.compute-1.amazonaws.com",
            "public_ip": "44.199.118.103",
            "public_ipv4_pool": "amazon",
            "tags": {
              "KubespotEnvironment": "dev"
            },
            "tags_all": {
              "KubespotEnvironment": "dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946488682732:internet-gateway/igw-08c690126ebd05eeb",
            "id": "igw-08c690126ebd05eeb",
            "owner_id": "946488682732",
            "tags": {
              "KubespotEnvironment": "dev",
              "Name": "dev"
            },
            "tags_all": {
              "KubespotEnvironment": "dev",
              "Name": "dev"
            },
            "vpc_id": "vpc-05b6699b96ee1d9a4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091eca0383cf596f5",
            "connectivity_type": "public",
            "id": "nat-0f41b72a65ee8fad4",
            "network_interface_id": "eni-007dc5342c4091bf2",
            "private_ip": "10.2.0.31",
            "public_ip": "44.199.173.16",
            "subnet_id": "subnet-052bccaba4fa32f64",
            "tags": {
              "KubespotEnvironment": "dev",
              "Name": "dev"
            },
            "tags_all": {
              "KubespotEnvironment": "dev",
              "Name": "dev"
            }
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4d78484324688a1",
            "connectivity_type": "public",
            "id": "nat-0c0d1cac764154547",
            "network_interface_id": "eni-007ac427a0a62208d",
            "private_ip": "10.2.1.187",
            "public_ip": "44.199.118.103",
            "subnet_id": "subnet-0945bae65ffb28b19",
            "tags": {
              "KubespotEnvironment": "dev",
              "Name": "dev"
            },
            "tags_all": {
              "KubespotEnvironment": "dev",
              "Name": "dev"
            }
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08c690126ebd05eeb",
            "id": "r-rtb-006bee8161e75a3d01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-006bee8161e75a3d0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08c690126ebd05eeb",
            "id": "r-rtb-0a54a7513ce91a9ae1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a54a7513ce91a9ae",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02234f87f53e1d2ea1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f41b72a65ee8fad4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02234f87f53e1d2ea",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eips",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04a20379f50ad8e7a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c0d1cac764154547",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04a20379f50ad8e7a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eips",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946488682732:route-table/rtb-02234f87f53e1d2ea",
            "id": "rtb-02234f87f53e1d2ea",
            "owner_id": "946488682732",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "KubespotEnvironment": "dev",
              "Name": "dev-private-0"
            },
            "tags_all": {
              "KubespotEnvironment": "dev",
              "Name": "dev-private-0"
            },
            "vpc_id": "vpc-05b6699b96ee1d9a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946488682732:route-table/rtb-04a20379f50ad8e7a",
            "id": "rtb-04a20379f50ad8e7a",
            "owner_id": "946488682732",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "KubespotEnvironment": "dev",
              "Name": "dev-private-1"
            },
            "tags_all": {
              "KubespotEnvironment": "dev",
              "Name": "dev-private-1"
            },
            "vpc_id": "vpc-05b6699b96ee1d9a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946488682732:route-table/rtb-006bee8161e75a3d0",
            "id": "rtb-006bee8161e75a3d0",
            "owner_id": "946488682732",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "KubespotEnvironment": "dev",
              "Name": "dev-public-0"
            },
            "tags_all": {
              "KubespotEnvironment": "dev",
              "Name": "dev-public-0"
            },
            "vpc_id": "vpc-05b6699b96ee1d9a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946488682732:route-table/rtb-0a54a7513ce91a9ae",
            "id": "rtb-0a54a7513ce91a9ae",
            "owner_id": "946488682732",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "KubespotEnvironment": "dev",
              "Name": "dev-public-1"
            },
            "tags_all": {
              "KubespotEnvironment": "dev",
              "Name": "dev-public-1"
            },
            "vpc_id": "vpc-05b6699b96ee1d9a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bba8ced370172d71",
            "route_table_id": "rtb-02234f87f53e1d2ea",
            "subnet_id": "subnet-03f21cc5724a24185"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086b3c7d91b4a67d6",
            "route_table_id": "rtb-04a20379f50ad8e7a",
            "subnet_id": "subnet-0e117dc13f4e7f3f6"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f692c3145e6ce5ea",
            "route_table_id": "rtb-006bee8161e75a3d0",
            "subnet_id": "subnet-052bccaba4fa32f64"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007fc4380b6e32830",
            "route_table_id": "rtb-0a54a7513ce91a9ae",
            "subnet_id": "subnet-0945bae65ffb28b19"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946488682732:security-group/sg-01453356329f4759d",
            "description": "Security group for bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01453356329f4759d",
            "ingress": [],
            "name": "dev-bastion",
            "name_prefix": "",
            "owner_id": "946488682732",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubespotEnvironment": "dev",
              "Name": "dev-bastion"
            },
            "tags_all": {
              "KubespotEnvironment": "dev",
              "Name": "dev-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b6699b96ee1d9a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946488682732:security-group/sg-0fef24284669de06f",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fef24284669de06f",
            "ingress": [],
            "name": "dev-cluster",
            "name_prefix": "",
            "owner_id": "946488682732",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubespotEnvironment": "dev",
              "Name": "dev"
            },
            "tags_all": {
              "KubespotEnvironment": "dev",
              "Name": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b6699b96ee1d9a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946488682732:security-group/sg-0be73ba9e7ece35b7",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be73ba9e7ece35b7",
            "ingress": [],
            "name": "dev-node",
            "name_prefix": "",
            "owner_id": "946488682732",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubespotEnvironment": "dev",
              "Name": "dev-node",
              "kubernetes.io/cluster/dev": "owned"
            },
            "tags_all": {
              "KubespotEnvironment": "dev",
              "Name": "dev-node",
              "kubernetes.io/cluster/dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b6699b96ee1d9a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-33737010",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01453356329f4759d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-ingress-node-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2541667969",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fef24284669de06f",
            "self": false,
            "source_security_group_id": "sg-0be73ba9e7ece35b7",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.cluster",
            "aws_security_group.node",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-ingress-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-3364783989",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0be73ba9e7ece35b7",
            "self": false,
            "source_security_group_id": "sg-0fef24284669de06f",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.cluster",
            "aws_security_group.node",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-ingress-self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1033610823",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0be73ba9e7ece35b7",
            "self": false,
            "source_security_group_id": "sg-0be73ba9e7ece35b7",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.node",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.2.2.0/24",
              "10.2.3.0/24"
            ],
            "description": "Allow from public_subnet cidr",
            "from_port": 0,
            "id": "sgrule-2564508436",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0be73ba9e7ece35b7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.node",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.2.0.0/24",
              "10.2.1.0/24"
            ],
            "description": "Allow from public_subnet cidr",
            "from_port": 0,
            "id": "sgrule-2079349964",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0be73ba9e7ece35b7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.node",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946488682732:subnet/subnet-03f21cc5724a24185",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.2.0/24",
            "id": "subnet-03f21cc5724a24185",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "946488682732",
            "tags": {
              "KubespotEnvironment": "dev",
              "Name": "dev-private",
              "kubernetes.io/cluster/dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "KubespotEnvironment": "dev",
              "Name": "dev-private",
              "kubernetes.io/cluster/dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05b6699b96ee1d9a4"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946488682732:subnet/subnet-0e117dc13f4e7f3f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.3.0/24",
            "id": "subnet-0e117dc13f4e7f3f6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "946488682732",
            "tags": {
              "KubespotEnvironment": "dev",
              "Name": "dev-private",
              "kubernetes.io/cluster/dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "KubespotEnvironment": "dev",
              "Name": "dev-private",
              "kubernetes.io/cluster/dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05b6699b96ee1d9a4"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946488682732:subnet/subnet-052bccaba4fa32f64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.0.0/24",
            "id": "subnet-052bccaba4fa32f64",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "946488682732",
            "tags": {
              "KubespotEnvironment": "dev",
              "Name": "dev",
              "kubernetes.io/cluster/dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "KubespotEnvironment": "dev",
              "Name": "dev",
              "kubernetes.io/cluster/dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05b6699b96ee1d9a4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946488682732:subnet/subnet-0945bae65ffb28b19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.1.0/24",
            "id": "subnet-0945bae65ffb28b19",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "946488682732",
            "tags": {
              "KubespotEnvironment": "dev",
              "Name": "dev",
              "kubernetes.io/cluster/dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "KubespotEnvironment": "dev",
              "Name": "dev",
              "kubernetes.io/cluster/dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05b6699b96ee1d9a4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946488682732:vpc/vpc-05b6699b96ee1d9a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0ee5bf80cc885f626",
            "default_route_table_id": "rtb-0dcbcdc1da87aca2e",
            "default_security_group_id": "sg-07546ede426e20b70",
            "dhcp_options_id": "dopt-0f33736b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05b6699b96ee1d9a4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dcbcdc1da87aca2e",
            "owner_id": "946488682732",
            "tags": {
              "KubespotEnvironment": "dev",
              "Name": "dev",
              "kubernetes.io/cluster/dev": "shared"
            },
            "tags_all": {
              "KubespotEnvironment": "dev",
              "Name": "dev",
              "kubernetes.io/cluster/dev": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}